Version History :
-----------------
v10.4.4
- repository: fixed home path retriaval of the user under windows 7

v10.3.24
- assetManager: fixed a little bug that causes Maya to not to load any
  references when there are no updates necessary

v10.3.23
- assetUpdater: replaced the hardcoded environment creation with
  environmentFactory's create method
- mayaEnv: maya environment now uses smart reference checks. Instead of
  checking every reference one by one, it now skips reference checks for same
  asset file. So if there are a lot of references of the same file, it will be
  replaced with the latest version much more quicker

v10.3.17
- oyProjectManager: dataModels renamed to models, and removed the "Models" from
  names of all the scripts under it, and updated all the scripts importing them
- oyProjectManager: environments directory is moved under models directory
- project: getAllAssetFileNamesForType, getAllAssetsForTypeAndBaseName methods
  are updated, now it searches for files starting with "baseName + '_*'", to
  make them more robust
- shotEditor: shotEditor is now working under Houdini
- mayaEnv: in maya (for now), the references are not loaded until the version
  check is done. This leads to much more quicker scene loads in case of lots of
  updates to referenced assets

v10.3.11
- projectModel: Sequence classes isValidExtension, addExtensionToIgnoreList,
  removeExtensionFromIgnoreList methods and parsing of the invalid extensions
  have been removed, due to the move of the extension validation to the
  environment classes
- nukeEnv: updated the NukeEnvironment class to use extensions

v10.3.10
- environmentFactory: the environment settings are now being red from an xml
  settings file, with this new system, environments will be able to filter
  files that they can not open etc.
- environmentFactory: environmentFactory is no more using class methods to
  create environments, so from now on an instance is needed to create