@@ -2,6 +2,8 @@ Version History :
 -----------------
 v10.4.4
 - repository: fixed home path retriaval of the user under windows 7
+- assetManager: fixed invalid calls to asset objects without fileNames while
+  updating the assetsListWidget
 
 v10.3.24
 - assetManager: fixed a little bug that causes Maya to not to load any
